# New-project

./: .gitignore  PLAN.md  README.md  index.html  package-lock.json  package.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/outputs/default-project/compress/2026-05-11_13-51-03/report/: report.csv  report.json
src-tauri/outputs/default-project/compress/2026-05-11_13-51-31/report/: report.csv  report.json
src-tauri/src/: lib.rs  main.rs
src/components/: AiResultsPanel.tsx  BatchToolPanel.tsx  SettingsPanel.tsx  TaskCenter.tsx
src/lib/: aiProvider.ts  api.ts  types.ts
