[package]
name = "ad-creative-studio"
version = "0.1.0"
description = "Desktop toolkit for ad creative image workflows"
authors = ["Ad Creative Studio"]
edition = "2021"

[lib]
name = "ad_creative_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
image = { version = "0.25", features = ["jpeg", "png", "webp"] }
keyring = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.0.0"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
